set up local env

--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,9 @@ name: fsdl-text-recognizer-2021
 channels:
   - defaults
 dependencies:
-  - python=3.6  # Google Colab is still on Python 3.6
-  - cudatoolkit=10.1
-  - cudnn=7.6
+  - python=3.6 # Google Colab is still on Python 3.6
+  # - cudatoolkit=10.1
+  # - cudnn=7.6
   - pip
   - pip:
-    - pip-tools
+      - pip-tools
